--- a/ml-pipelines/sdk/train-sdkv2.ipynb
+++ b/ml-pipelines/sdk/train-sdkv2.ipynb
@@ -161,7 +161,7 @@
         "We can create a **compute instance** with cli v2 or sdk v2 using the following syntax:\n",
         "\n",
         "<center>\n",
-        "<img src=\"../imgs/create_compute_instance.png\" width = \"700px\" alt=\"Create Compute Instance cli vs sdk\">\n",
+        "<img src=\"../../imgs/create_compute_instance.png\" width = \"700px\" alt=\"Create Compute Instance cli vs sdk\">\n",
         "</center>\n",
         "\n",
         "\n",
@@ -170,7 +170,7 @@
         "We can create a **compute cluster** with cli v2 or sdk v2 using the following syntax:\n",
         "\n",
         "<center>\n",
-        "<img src=\"../imgs/create_compute_cluster.png\" width = \"700px\" alt=\"Create Compute Instance cli vs sdk\">\n",
+        "<img src=\"../../imgs/create_compute_cluster.png\" width = \"700px\" alt=\"Create Compute Instance cli vs sdk\">\n",
         "</center>\n",
         "\n",
         "\n",
@@ -252,7 +252,7 @@
         "We can create a **datastore** with cli v2 or sdk v2 using the following syntax:\n",
         "\n",
         "<center>\n",
-        "<img src=\"../imgs/create_datastore.png\" width = \"700px\" alt=\"Create Datastore cli vs sdk\">\n",
+        "<img src=\"../../imgs/create_datastore.png\" width = \"700px\" alt=\"Create Datastore cli vs sdk\">\n",
         "</center>\n",
         "\n",
         "\n",
@@ -272,7 +272,7 @@
         "We can create a **data asset** with cli v2 or sdk v2 using the following syntax:\n",
         "\n",
         "<center>\n",
-        "<img src=\"../imgs/create_data_asset.png\" width = \"700px\" alt=\"Create Data Asset cli vs sdk\">\n",
+        "<img src=\"../../imgs/create_data_asset.png\" width = \"700px\" alt=\"Create Data Asset cli vs sdk\">\n",
         "</center>"
       ]
     },
@@ -339,7 +339,7 @@
         "We can register an **environment** with cli v2 or sdk v2 using the following syntax:\n",
         "\n",
         "<center>\n",
-        "<img src=\"../imgs/create_environment.png\" width = \"700px\" alt=\"Create Environment cli vs sdk\">\n",
+        "<img src=\"../../imgs/create_environment.png\" width = \"700px\" alt=\"Create Environment cli vs sdk\">\n",
         "</center>"
       ]
     },
@@ -414,7 +414,7 @@
         "We can submit a **job** with cli v2 or sdk v2 using the following syntax:\n",
         "\n",
         "<center>\n",
-        "<img src=\"../imgs/create_job.png\" width = \"700px\" alt=\"Create Job cli vs sdk\">\n",
+        "<img src=\"../../imgs/create_job.png\" width = \"700px\" alt=\"Create Job cli vs sdk\">\n",
         "</center>\n",
         "\n",
         "<br>\n",
@@ -428,7 +428,7 @@
         "We can submit a **pipeline job** with cli v2 or sdk v2 using the following syntax:\n",
         "\n",
         "<center>\n",
-        "<img src=\"../imgs/create_pipeline.png\" width = \"700px\" alt=\"Create Pipeline cli vs sdk\">\n",
+        "<img src=\"../../imgs/create_pipeline.png\" width = \"700px\" alt=\"Create Pipeline cli vs sdk\">\n",
         "</center>"
       ]
     },
