updated managed batch endpoint for sdk

--- a/ml-pipelines/sdk/deploy-online-endpoint-sdkv2.ipynb
+++ b/ml-pipelines/sdk/deploy-online-endpoint-sdkv2.ipynb
@@ -329,7 +329,7 @@
         "# invoke and test endpoint\n",
         "ml_client.online_endpoints.invoke(\n",
         "    endpoint_name=endpoint_name,\n",
-        "    request_file=\"../data/taxi-request.json\",\n",
+        "    request_file=\"../../data/taxi-request.json\",\n",
         ")\n"
       ]
     }
