--- a/ml-pipelines/cli/azureml-cliv2.ipynb
+++ b/ml-pipelines/cli/azureml-cliv2.ipynb
@@ -1,7 +1,9 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "For this workshop, you need:\n",
         "\n",
@@ -16,47 +18,13 @@
         "\n",
         "```bash\n",
         "az extension add --name ml\n",
-        "```"
-      ],
-      "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!az extension add --name ml"
-      ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": "\u001b[K - Downloading ..\r\u001b[K - Installing ..\r"
-        }
-      ],
-      "execution_count": 2,
-      "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!az login --identity"
-      ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": "\u001b[91musage error: '--identity' is not applicable with other arguments\u001b[0m\r\n"
-        }
-      ],
-      "execution_count": 7,
-      "metadata": {
-        "tags": []
-      }
+        "az login --identity\n",
+        "```\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Model Training"
-      ],
       "metadata": {
         "nteract": {
           "transient": {
@@ -64,12 +32,24 @@
           }
         },
         "tags": []
-      }
+      },
+      "source": [
+        "# Model Training"
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "tags": []
+      },
       "source": [
-        "## 1. Create Managed Compute\n",
+        "## (Optional) 1. Create Managed Compute\n",
         "\n",
         "A compute is a designated compute resource where you run your job or host your endpoint. Azure Machine learning supports the following types of compute:\n",
         "\n",
@@ -102,7 +82,21 @@
         "\n",
         "\n",
         "Let's create a managed compute cluster for the training workload."
-      ],
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "``` python\n",
+        "# Create train job compute cluster\n",
+        "!az ml compute create --file train/compute.yml\n",
+        "```"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
       "metadata": {
         "nteract": {
           "transient": {
@@ -110,20 +104,7 @@
           }
         },
         "tags": []
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Create train job compute cluster\n",
-        "!az ml compute create --file train/compute.yml"
-      ],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
+      },
       "source": [
         "## 2. Register Data Asset\n",
         "\n",
@@ -140,9 +121,7 @@
         "* Azure Storage file share\n",
         "* Azure Data Lake Gen 1\n",
         "* Azure Data Lake Gen 2\n",
-        "* Azure SQL Database \n",
-        "* Azure PostgreSQL Database\n",
-        "* Azure MySQL Database\n",
+        "\n",
         "\n",
         "It is not a requirement to use Azure Machine Learning datastores - you can use storage URIs directly assuming you have access to the underlying data.\n",
         "\n",
@@ -175,32 +154,16 @@
         "<center>\n",
         "<img src=\"../../imgs/create_data_asset.png\" width = \"700px\" alt=\"Create Data Asset cli vs sdk\">\n",
         "</center>"
-      ],
-      "metadata": {
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        },
-        "tags": []
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Register data asset \n",
-        "!az ml data create --file train/data.yml"
-      ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": "{\r\n  \"creation_context\": {\r\n    \"created_at\": \"2022-12-16T16:19:12.361319+00:00\",\r\n    \"created_by\": \"Louis Li (AI)\",\r\n    \"created_by_type\": \"User\",\r\n    \"last_modified_at\": \"2022-12-16T16:19:12.388994+00:00\"\r\n  },\r\n  \"description\": \"taxi dataset\",\r\n  \"id\": \"/subscriptions/8480def5-8f7a-4285-99f7-295b61d7b22a/resourceGroups/mldemorg/providers/Microsoft.MachineLearningServices/workspaces/mldemo/data/taxi-data/versions/2\",\r\n  \"name\": \"taxi-data\",\r\n  \"path\": \"azureml://subscriptions/8480def5-8f7a-4285-99f7-295b61d7b22a/resourcegroups/mldemorg/workspaces/mldemo/datastores/workspaceblobstore/paths/LocalUpload/9292ec840b5d1db6306dba71da69ab7f/taxi-data.csv\",\r\n  \"properties\": {},\r\n  \"resourceGroup\": \"mldemorg\",\r\n  \"tags\": {},\r\n  \"type\": \"uri_file\",\r\n  \"version\": \"2\"\r\n}\r\n\u001b[0m"
-        }
-      ],
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "collapsed": false,
+        "gather": {
+          "logged": 1671207553070
+        },
         "jupyter": {
           "outputs_hidden": false,
           "source_hidden": false
@@ -209,14 +172,47 @@
           "transient": {
             "deleting": false
           }
-        },
-        "gather": {
-          "logged": 1671207553070
         }
-      }
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{\n",
+            "  \"creation_context\": {\n",
+            "    \"created_at\": \"2022-12-17T21:49:48.920027+00:00\",\n",
+            "    \"created_by\": \"Louis Li (AI)\",\n",
+            "    \"created_by_type\": \"User\",\n",
+            "    \"last_modified_at\": \"2022-12-17T21:49:48.952502+00:00\"\n",
+            "  },\n",
+            "  \"description\": \"taxi dataset\",\n",
+            "  \"id\": \"/subscriptions/8480def5-8f7a-4285-99f7-295b61d7b22a/resourceGroups/mldemorg/providers/Microsoft.MachineLearningServices/workspaces/mldemo/data/taxi-data/versions/6\",\n",
+            "  \"name\": \"taxi-data\",\n",
+            "  \"path\": \"azureml://subscriptions/8480def5-8f7a-4285-99f7-295b61d7b22a/resourcegroups/mldemorg/workspaces/mldemo/datastores/workspaceblobstore/paths/LocalUpload/9292ec840b5d1db6306dba71da69ab7f/taxi-data.csv\",\n",
+            "  \"resourceGroup\": \"mldemorg\",\n",
+            "  \"tags\": {},\n",
+            "  \"type\": \"uri_file\",\n",
+            "  \"version\": \"6\"\n",
+            "}\n",
+            "\u001b[0m"
+          ]
+        }
+      ],
+      "source": [
+        "# Register data asset \n",
+        "!az ml data create --file train/data.yml"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      },
       "source": [
         "## 3. Register Train Environment\n",
         "\n",
@@ -238,23 +234,11 @@
         "<center>\n",
         "<img src=\"../../imgs/create_environment.png\" width = \"700px\" alt=\"Create Environment cli vs sdk\">\n",
         "</center>"
-      ],
-      "metadata": {
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        }
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Register train environment \n",
-        "!az ml environment create --file train/environment.yml"
-      ],
-      "outputs": [],
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "collapsed": false,
         "jupyter": {
@@ -266,10 +250,72 @@
             "deleting": false
           }
         }
-      }
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{\n",
+            "  \"conda_file\": {\n",
+            "    \"channels\": [\n",
+            "      \"defaults\",\n",
+            "      \"anaconda\",\n",
+            "      \"conda-forge\"\n",
+            "    ],\n",
+            "    \"dependencies\": [\n",
+            "      \"python=3.7.5\",\n",
+            "      \"pip\",\n",
+            "      {\n",
+            "        \"pip\": [\n",
+            "          \"azureml-mlflow==1.38.0\",\n",
+            "          \"azure-ai-ml==1.0.0\",\n",
+            "          \"pyarrow==10.0.0\",\n",
+            "          \"ruamel.yaml==0.17.21\",\n",
+            "          \"scikit-learn==0.24.1\",\n",
+            "          \"pandas==1.2.1\",\n",
+            "          \"joblib==1.0.0\",\n",
+            "          \"matplotlib==3.3.3\"\n",
+            "        ]\n",
+            "      }\n",
+            "    ]\n",
+            "  },\n",
+            "  \"creation_context\": {\n",
+            "    \"created_at\": \"2022-12-17T21:50:31.521465+00:00\",\n",
+            "    \"created_by\": \"Louis Li (AI)\",\n",
+            "    \"created_by_type\": \"User\",\n",
+            "    \"last_modified_at\": \"2022-12-17T21:50:31.521465+00:00\",\n",
+            "    \"last_modified_by\": \"Louis Li (AI)\",\n",
+            "    \"last_modified_by_type\": \"User\"\n",
+            "  },\n",
+            "  \"description\": \"Environment created from a Docker image plus Conda environment to train taxi model.\",\n",
+            "  \"id\": \"azureml:/subscriptions/8480def5-8f7a-4285-99f7-295b61d7b22a/resourceGroups/mldemorg/providers/Microsoft.MachineLearningServices/workspaces/mldemo/environments/taxi-train-env/versions/5\",\n",
+            "  \"image\": \"mcr.microsoft.com/azureml/openmpi3.1.2-ubuntu18.04\",\n",
+            "  \"name\": \"taxi-train-env\",\n",
+            "  \"os_type\": \"linux\",\n",
+            "  \"resourceGroup\": \"mldemorg\",\n",
+            "  \"tags\": {},\n",
+            "  \"version\": \"5\"\n",
+            "}\n",
+            "\u001b[0m"
+          ]
+        }
+      ],
+      "source": [
+        "# Register train environment \n",
+        "!az ml environment create --file train/environment.yml"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "tags": []
+      },
       "source": [
         "## 4. Create Pipeline Job\n",
         "\n",
@@ -306,23 +352,10 @@
         "<center>\n",
         "<img src=\"../../imgs/create_pipeline.png\" width = \"700px\" alt=\"Create Pipeline cli vs sdk\">\n",
         "</center>"
-      ],
-      "metadata": {
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        },
-        "tags": []
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Create pipeline job\n",
-        "!az ml job create --file train/pipeline.yml"
-      ],
-      "outputs": [],
       "execution_count": null,
       "metadata": {
         "collapsed": false,
@@ -335,10 +368,22 @@
             "deleting": false
           }
         }
-      }
+      },
+      "outputs": [],
+      "source": [
+        "# Create pipeline job\n",
+        "!az ml job create --file train/pipeline.yml"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      },
       "source": [
         "# Online Endpoint\n",
         "\n",
@@ -367,17 +412,17 @@
         "<center>\n",
         "<img src=\"../../imgs/endpoint_concept.png\" width = \"500px\" alt=\"Online Endpoint Concept cli vs sdk\">\n",
         "</center>"
-      ],
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "nteract": {
           "transient": {
             "deleting": false
           }
         }
-      }
-    },
-    {
-      "cell_type": "markdown",
+      },
       "source": [
         "## 1. Create Online Endpoint\n",
         "\n",
@@ -386,22 +431,10 @@
         "<center>\n",
         "<img src=\"../../imgs/create_online_endpoint.png\" width = \"700px\" alt=\"Create Online Endpoint cli vs sdk\">\n",
         "</center>"
-      ],
-      "metadata": {
-        "nteract": {
-          "transient": {
-            "deleting": false
-          }
-        }
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# create online endpoint\n",
-        "!az ml online-endpoint create --file deploy/online/online-endpoint.yml"
-      ],
-      "outputs": [],
       "execution_count": null,
       "metadata": {
         "collapsed": false,
@@ -414,10 +447,16 @@
             "deleting": false
           }
         }
-      }
+      },
+      "outputs": [],
+      "source": [
+        "# create online endpoint\n",
+        "!az ml online-endpoint create --file deploy/online/online-endpoint.yml"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## 2. Create Online Deployment\n",
         "\n",
@@ -435,16 +474,10 @@
         "<center>\n",
         "<img src=\"../../imgs/create_online_deployment.png\" width = \"700px\" alt=\"Create Online Deployment cli vs sdk\">\n",
         "</center>"
-      ],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# create online deployment\n",
-        "!az ml online-deployment create --file deploy/online/online-deployment.yml "
-      ],
-      "outputs": [],
       "execution_count": null,
       "metadata": {
         "collapsed": false,
@@ -457,27 +490,33 @@
             "deleting": false
           }
         }
-      }
+      },
+      "outputs": [],
+      "source": [
+        "# create online deployment\n",
+        "!az ml online-deployment create --file deploy/online/online-deployment.yml "
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## 3. Allocate Traffic"
-      ],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "# allocate traffic\n",
         "!az ml online-endpoint update --name taxi-online-endpoint --traffic blue=100"
-      ],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## 4. Invoke and Test Endpoint\n",
         "\n",
@@ -486,45 +525,45 @@
         "<center>\n",
         "<img src=\"../../imgs/invoke_online_endpoint.png\" width = \"700px\" alt=\"Invoke online endpoint cli vs sdk\">\n",
         "</center>"
-      ],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "# invoke and test endpoint\n",
         "!az ml online-endpoint invoke --name taxi-online-endpoint --request-file ../../data/taxi-request.json"
-      ],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "# Model Batch Endpoint"
-      ],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## 1. Create Batch Compute Cluster"
-      ],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "# create compute cluster to be used by batch cluster\n",
         "!az ml compute create -n batch-cluster --type amlcompute --min-instances 0 --max-instances 3"
-      ],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## 2. Create Batch Endpoint\n",
         "\n",
@@ -534,21 +573,21 @@
         "<center>\n",
         "<img src=\"../../imgs/create_batch_endpoint.png\" width = \"700px\" alt=\"Create batch endpoint cli vs sdk\">\n",
         "</center>"
-      ],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "# create batch endpoint\n",
         "!az ml batch-endpoint create --file deploy/batch/batch-endpoint.yml"
-      ],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## 3. Create Batch Deployment\n",
         "\n",
@@ -559,21 +598,21 @@
         "</center>\n",
         "\n",
         "Note that if you're deploying **MLFlow models**, there's no need to provide **a scoring script** and execution **environment**, as both are autogenerated."
-      ],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "# create batch deployment\n",
         "!az ml batch-deployment create --file deploy/batch/batch-deployment.yml --set-default"
-      ],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## 4. Invoke and Test Endpoint\n",
         "\n",
@@ -582,18 +621,17 @@
         "<center>\n",
         "<img src=\"../../imgs/invoke_batch_deployment.png\" width = \"700px\" alt=\"Invoke batch deployment cli vs sdk\">\n",
         "</center>"
-      ],
-      "metadata": {}
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "# invoke and test endpoint\n",
         "!az ml batch-endpoint invoke --name taxi-batch-endpoint --input ../../data/taxi-batch.csv"
-      ],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {}
+      ]
     }
   ],
   "metadata": {
@@ -601,21 +639,21 @@
       "name": "python38-azureml"
     },
     "kernelspec": {
-      "name": "python38-azureml",
+      "display_name": "Python 3.8 - AzureML",
       "language": "python",
-      "display_name": "Python 3.8 - AzureML"
+      "name": "python38-azureml"
     },
     "language_info": {
-      "name": "python",
-      "version": "3.8.5",
-      "mimetype": "text/x-python",
       "codemirror_mode": {
         "name": "ipython",
         "version": 3
       },
-      "pygments_lexer": "ipython3",
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
       "nbconvert_exporter": "python",
-      "file_extension": ".py"
+      "pygments_lexer": "ipython3",
+      "version": "3.8.5"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
